added items to shelves

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,17 +154,17 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=316.000 Y=180.000
-WindowSize=X=1273.333 Y=665.333
+ScreenPosition=X=1788.800 Y=160.000
+WindowSize=X=1275.200 Y=667.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -181,7 +181,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=C:/Users/DELL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -2559,11 +2559,16 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/PuzzleBP/Blueprints/Cylinder_Blueprint.Cylinder_Blueprint=1
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_QuadPyramid.Shape_QuadPyramid;
+RecentlyPlaced=/Game/StarterContent/Props/SM_MatPreviewMesh_02.SM_MatPreviewMesh_02;
+RecentlyPlaced=/Game/StarterContent/Props/SM_CornerFrame.SM_CornerFrame;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/StarterContent/Props/SM_MatPreviewMesh_02.SM_MatPreviewMesh_02;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
@@ -2574,11 +2579,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/Cube.Cube;
 RecentlyPlaced=/Game/Geometry/Meshes/FactoryLight.FactoryLight;
 RecentlyPlaced=/Game/Geometry/Meshes/RivetStamp.RivetStamp;
 RecentlyPlaced=/Game/Geometry/Meshes/Rivet.Rivet;
-RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
-RecentlyPlaced=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue.looping_factory_ambience__inspectorj-a__Cue;
-RecentlyPlaced=/Game/ParticleFX/AlanRings/ringsSystem.ringsSystem;
-RecentlyPlaced=/Game/Audio/Music/alanbgmv3_Cue.alanbgmv3_Cue;
-RecentlyPlaced=/Game/Materials/FloorPlane1.FloorPlane1;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2969,7 +2969,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
-SceneComponent=
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
