Added electrical sign and alan floor markings

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,9 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
@@ -163,8 +165,8 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=1788.800 Y=160.000
-WindowSize=X=1275.200 Y=667.200
+ScreenPosition=X=124.800 Y=72.800
+WindowSize=X=1276.800 Y=668.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -181,11 +183,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/DELL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=../../../../Unreal Projects/blah/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
-GenericImport=E:/Team Project and Professionalism/Models/conveyor2.fbx
+GenericImport=C:/Users/olive/OneDrive - Northumbria University - Production Azure AD/Year 3/Team Project and Professionalism/Models/Alan Floor area.fbx
 GenericExport=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 GenericOpen=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 GenericSave=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1017,10 +1019,10 @@ ApexDestruction.TimeStamp=2023.03.02-16.29.18
 ApexDestruction.LastCompileMethod=External
 ApexDestructionEditor.TimeStamp=2023.03.02-16.29.18
 ApexDestructionEditor.LastCompileMethod=External
-VictoryBPLibrary.TimeStamp=2023.03.20-14.53.33
+VictoryBPLibrary.TimeStamp=2023.03.24-22.52.11
 VictoryBPLibrary.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2022.04.14-19.58.36
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.05.04-23.53.59
+HierarchicalLODUtilities.LastCompileMethod=External
 Voice.TimeStamp=2023.03.02-16.20.55
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2023.03.02-16.20.41
@@ -1031,28 +1033,30 @@ SynthBenchmark.TimeStamp=2022.01.27-22.53.12
 SynthBenchmark.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2022.05.04-23.54.07
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem1=/Game/ParticleFX/spraySystem
-MRUItem2=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem4=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem5=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
-MRUItem6=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem7=/Game/Audio/Cylinder_Blueprint
-MRUItem8=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
-MRUItem9=/Game/Audio/Success_Beep/success_beep_Cue
-MRUItem10=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem11=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem12=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem13=/Game/PuzzleBP/Blueprints/Cube
-MRUItem14=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem15=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem16=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem17=/Game/Materials/ALANScreen
-MRUItem18=/Game/Materials/CGreen
-MRUItem19=/Game/Materials/CRed
+MRUItem0=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube
+MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem2=/Game/ParticleFX/spraySystem
+MRUItem3=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem5=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem6=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
+MRUItem7=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem8=/Game/Audio/Cylinder_Blueprint
+MRUItem9=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
+MRUItem10=/Game/Audio/Success_Beep/success_beep_Cue
+MRUItem11=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem12=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem13=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem14=/Game/PuzzleBP/Blueprints/Cube
+MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem16=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem17=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem18=/Game/Materials/ALANScreen
+MRUItem19=/Game/Materials/CGreen
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2388,6 +2392,9 @@ RectLightComponent.DistanceFieldShadows=True
 RectLightComponent.RayTracing=True
 RectLightComponent.Tags=True
 RectLightComponent.Cooking=True
+MeshMergingSettingsObject.MeshSettings=True
+MeshMergingSettingsObject.MaterialSettings=True
+MeshMergingSettingsObject.LandscapeCulling=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2557,8 +2564,17 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Audio/Success_Beep/success_beep_Cue.success_beep_Cue=1
 /Game/ParticleFX/AlanRings/ringsSystem.ringsSystem=1
 /Game/PuzzleBP/Blueprints/Cylinder_Blueprint.Cylinder_Blueprint=1
+/Game/Geometry/Meshes/Electrical_panel_Sign_Cube.Electrical_panel_Sign_Cube=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Meshes/AlanFloorPlane.AlanFloorPlane;
+RecentlyPlaced=/Game/Geometry/Meshes/Alan_Floor_area_Plane_003.Alan_Floor_area_Plane_003;
+RecentlyPlaced=/Game/Geometry/Meshes/Alan_Floor_area_Plane_001.Alan_Floor_area_Plane_001;
+RecentlyPlaced=/Game/Geometry/Meshes/Alan_Floor_area_Plane.Alan_Floor_area_Plane;
+RecentlyPlaced=/Game/Geometry/Meshes/ElectricalPanelSign.ElectricalPanelSign;
+RecentlyPlaced=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube_002.Electrical_panel_Sign_Cube_002;
+RecentlyPlaced=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube_001.Electrical_panel_Sign_Cube_001;
+RecentlyPlaced=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube.Electrical_panel_Sign_Cube;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_QuadPyramid.Shape_QuadPyramid;
@@ -2571,14 +2587,6 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
-RecentlyPlaced=/Game/Geometry/Meshes/Vent.Vent;
-RecentlyPlaced=/Game/Geometry/Meshes/RightAnglePipe.RightAnglePipe;
-RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
-RecentlyPlaced=/Game/Geometry/Meshes/Cube.Cube;
-RecentlyPlaced=/Game/Geometry/Meshes/FactoryLight.FactoryLight;
-RecentlyPlaced=/Game/Geometry/Meshes/RivetStamp.RivetStamp;
-RecentlyPlaced=/Game/Geometry/Meshes/Rivet.Rivet;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2647,7 +2655,7 @@ StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 OutputDisplay_C=
-ALAN_C="\"Object.TimerDelay\" "
+ALAN_C=
 ConveyorBelt_C=
 Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
@@ -2854,6 +2862,7 @@ K2Node_VariableGet.Variable=True
 LevelEditorPlaySettings.PlayInEditor=True
 LevelScriptBlueprint.ClassOptions=True
 NiagaraComponent.ComponentTick=False
+StaticMeshActor.Materials=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2893,12 +2902,12 @@ SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-ControlPanel_C=
+ControlPanel_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-ALAN_C=
+ALAN_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
@@ -2969,7 +2978,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
-SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
